K8s/kubeadm/tools/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: jenkins
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.control.clickthebutton.click	
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Prefix
